# wfm_schedule_updater

./: .gitignore  README.md  main.py  pyproject.toml  scraper.py
src/: main.py  shift.py
